animation transition fix on smaller screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
 .wrapper {
   padding: 1rem 2rem;
 }
+
+main {
+  min-height: calc(100vh - 125px);
+}
