--- a/src/app/pages/work/components/work-summary/work-summary.component.scss
+++ b/src/app/pages/work/components/work-summary/work-summary.component.scss
@@ -4,10 +4,10 @@ p:first-of-type {
 }
 
 .profile-img {
-  width: 6rem;
+  width: 5.5rem;
   height: auto;
   float: right;
-  margin-left: 1.5rem;
+  margin-left: 1rem;
 }
 
 .description {
