--- a/src/app/shared/components/work-wrapper/work-wrapper.component.scss
+++ b/src/app/shared/components/work-wrapper/work-wrapper.component.scss
@@ -1,7 +1,3 @@
-.work-wrapper {
-  min-height: calc(100vh - 125px);
-}
-
 .work-content {
   max-width: 1024px;
   width: 100%;
